@@ -1,3 +1,8 @@
+Sun Nov  6 14:38:12 2005  Alex Waugh  <alex@alexwaugh.com>
+
+	* gen-makefiles.pl: Attempt to strip out incorrect dependencies added
+	  by gcc -M.
+
 Mon Oct 10 14:20:00 2005  Peter Naulls <peter@chocky.org>
 
 	* Docs/ReadMe: Misc corrections and updates.
